fix home card overlap issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -532,7 +532,6 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   padding: 0.3rem;
-  max-height: 20.25rem;
 }
 
 .product-wrapper__inner {
